--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -1,9 +1,9 @@
-name: Build, Test, Package, and Publish
+name: Build and Test
 
-on: workflow_dispatch
+on: push
 
 jobs:
-    build-test-package-publish:
+    build-test:
         runs-on: windows-latest
 
         steps:
@@ -20,10 +20,6 @@ jobs:
         - run: dotnet build --no-restore --configuration Release
           
         - run: dotnet test --no-build --configuration Release --verbosity normal
-  
-        - run: dotnet pack --no-build --configuration Release FOSStrich.BCL.Opinions\FOSStrich.BCL.Opinions.csproj
-  
-        - run: dotnet nuget push --source https://api.nuget.org/v3/index.json --api-key ${{secrets.NUGET_APIKEY}} "FOSStrich.BCL.Opinions\bin\Release\*.nupkg"
   
         - uses: codecov/codecov-action@v3
           env:
