Added code coverage parameter to "dotnet test" in workflows.

--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -19,7 +19,7 @@ jobs:
           
         - run: dotnet build --no-restore --configuration Release
           
-        - run: dotnet test --no-build --configuration Release --verbosity normal
+        - run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
   
         - uses: codecov/codecov-action@v3
           env:
