Renamed FOSStrich to NorthSouthSystems and created a bare minimum README.

--- a/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
+++ b/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FOSStrich.BCL.Opinions\FOSStrich.BCL.Opinions.csproj" />
+        <ProjectReference Include="..\NorthSouthSystems.BCL.Opinions\NorthSouthSystems.BCL.Opinions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
