--- a/.github/workflows/BuildTestAnalyze.yml
+++ b/.github/workflows/BuildTestAnalyze.yml
@@ -34,8 +34,8 @@ jobs:
               $version = & nbgv get-version --variable NuGetPackageVersion
 
               dotnet-sonarscanner begin `
-                  /o:"fosstrich" `
-                  /k:"FOSStrich_FOSStrich.BCL.Opinions" `
+                  /o:"northsouthsystems" `
+                  /k:"NorthSouthSystems_NorthSouthSystems.BCL.Opinions" `
                   /v:$version `
                   /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml `
                   /d:sonar.dotnet.excludeTestProjects=true `
