--- a/.github/workflows/BuildTestPackagePublish.yml
+++ b/.github/workflows/BuildTestPackagePublish.yml
@@ -21,6 +21,6 @@ jobs:
           
         - run: dotnet test --no-build --configuration Release --verbosity normal
   
-        - run: dotnet pack --no-build --configuration Release FOSStrich.BCL.Opinions\FOSStrich.BCL.Opinions.csproj
+        - run: dotnet pack --no-build --configuration Release NorthSouthSystems.BCL.Opinions\NorthSouthSystems.BCL.Opinions.csproj
   
-        - run: dotnet nuget push --source https://api.nuget.org/v3/index.json --api-key ${{secrets.NUGET_APIKEY}} "FOSStrich.BCL.Opinions\bin\Release\*.nupkg"
+        - run: dotnet nuget push --source https://api.nuget.org/v3/index.json --api-key ${{secrets.NUGET_APIKEY}} "NorthSouthSystems.BCL.Opinions\bin\Release\*.nupkg"
