--- a/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
+++ b/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
@@ -6,6 +6,7 @@
         <IsPackable>false</IsPackable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <ImplicitUsings>disable</ImplicitUsings>
+        <SonarQubeExclude>true</SonarQubeExclude>
     </PropertyGroup>
 
     <ItemGroup>
