--- a/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
+++ b/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
@@ -5,8 +5,12 @@
         <LangVersion>latest</LangVersion>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <ImplicitUsings>disable</ImplicitUsings>
+
+        <Description>This .NET library contains opinionated adapters, extensions, and helper classes for the .NET Base Class Library.</Description>
+        <PackageIcon>Icon.png</PackageIcon>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/NorthSouthSystems/NorthSouthSystems.BCL.Opinions.git</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
@@ -29,6 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="..\Icon.png" Pack="true" PackagePath="" />
         <None Include="..\LICENSE" Pack="true" PackagePath="" />
         <None Include="..\README.md" Pack="true" PackagePath="" />
     </ItemGroup>
