--- a/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
+++ b/NorthSouthSystems.BCL.Opinions.Test/NorthSouthSystems.BCL.Opinions.Test.csproj
@@ -1,10 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-        <TargetFrameworks>net48;net9.0</TargetFrameworks>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+    <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
