--- a/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
+++ b/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Description>This .NET library contains opinionated adapters, extensions, and helper classes for the .NET Base Class Library.</Description>
     </PropertyGroup>
 
