Added BinaryRoundTrip and XxHash128X for opinionated patterns working with binary representations of primitive Types.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <!--<PackageVersion Include="" Version="" />-->
+        <PackageVersion Include="CsCheck" Version="4.4.1" />
+        <PackageVersion Include="System.IO.Hashing" Version="9.0.9" />
     </ItemGroup>
 </Project>
