--- a/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
+++ b/NorthSouthSystems.BCL.Opinions/NorthSouthSystems.BCL.Opinions.csproj
@@ -1,3 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <ItemGroup>
+        <PackageReference Include="System.IO.Hashing" />
+    </ItemGroup>
+
 </Project>
