Renamed all Tests classes to include T_ prefix (Benchmarks B_) and removed Tests (or Benchmarks) suffix. Removed all Tests (and Benchmarks) from namespaces. Added global usings to counter the lack of namespace where appropriate.

--- a/NorthSouthSystems.BCL.Opinions.Tests/NorthSouthSystems.BCL.Opinions.Tests.csproj
+++ b/NorthSouthSystems.BCL.Opinions.Tests/NorthSouthSystems.BCL.Opinions.Tests.csproj
@@ -8,4 +8,8 @@
         <ProjectReference Include="..\NorthSouthSystems.BCL.Opinions\NorthSouthSystems.BCL.Opinions.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Using Include="NorthSouthSystems" />
+    </ItemGroup>
+
 </Project>
